fixed the text so it wraps around the image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,10 +53,11 @@ li:first-child {
     float: left;
     text-align: center;
     color: #ffffff;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #4aaaa5;
     max-width: 248px;
     margin: 0;
-    height: 96px;
+    height: 97px;
     padding: 10px;
     font-size: 20pt;
     padding-top: 30px;
@@ -114,4 +115,10 @@ body {
     margin: auto;
     background: white;
     padding: 0px;
+}
+
+#float {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
